tests/divide_by_rand.ppig

import "C" "stdlib.h"

func main(): i32
{
    let num = rand();
    let d = 100 / num; //error
    return 0;
}
